--- a/src/RecrutMe.Web/appsettings.json
+++ b/src/RecrutMe.Web/appsettings.json
@@ -3,5 +3,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "ConnectionString": "server=127.0.0.1;database=db1;user=app1;password=test-test-test",
+
+  "JwtKey": "SOME_RANDOM_KEY_DO_NOT_SHARE",
+  "JwtIssuer": "http://localhost:5000/",
+  "JwtExpireDays": 30
+
 }
