--- a/src/RecruitMe.Web/tsconfig.json
+++ b/src/RecruitMe.Web/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "module": "es2015",
+    "module": "es2015",   
     "moduleResolution": "node",
     "target": "es5",
     "sourceMap": true,
     "skipDefaultLibCheck": true,
     "strict": true,
-    "types": ["webpack-env"]
+    "types": ["webpack-env"],
+    "lib": ["es5", "es2015", "dom", "scripthost"]
   },
   "exclude": [
       "bin",
