--- a/src/RecruitMe.MobileApp/.gitignore
+++ b/src/RecruitMe.MobileApp/.gitignore
@@ -1,34 +1,9 @@
-# NativeScript
-hooks/
-!hooks/after-createProject/*.js
-node_modules/
-platforms/
-
-# NativeScript Template
-*.js.map
-!webpack.config.js
-*.css
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+# JetBrains project files
 .idea
-.cloud
-.project
-tmp/
-typings/
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# NPM
+node_modules
+
+# NativeScript application
+hooks
+platforms
