--- a/src/RecruitMe.Web/RecruitMe.Web.csproj
+++ b/src/RecruitMe.Web/RecruitMe.Web.csproj
@@ -33,6 +33,10 @@
     <ProjectReference Include="..\RecruitMe.Logic\RecruitMe.Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\components\account\login\" />
+  </ItemGroup>
+
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
