--- a/src/RecruitMe.MobileApp/package.json
+++ b/src/RecruitMe.MobileApp/package.json
@@ -21,8 +21,10 @@
     "nativescript-socketio": "^3.2.1",
     "nativescript-theme-core": "^1.0.6",
     "nativescript-toasty": "^1.3.0",
+    "nativescript-ui-sidedrawer": "^8.0.0",
     "nativescript-vue": "^2.4.0",
     "nativescript-vue-devtools": "^1.2.0",
+    "rxjs": "^6.5.3",
     "tns-core-modules": "^6.0.0",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.2.2",
