--- a/src/RecruitMe.Web/RecruitMe.Web.csproj
+++ b/src/RecruitMe.Web/RecruitMe.Web.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
+    <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,7 +35,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClientApp\components\account\login\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="assets\" />
+    <Folder Include="assets\recruitment" />
+    <Folder Include="assets\recruitment\images" />
     <Folder Include="wwwroot\recruitment\" />
   </ItemGroup>
 
