--- a/src/RecruitMe.Web/package.json
+++ b/src/RecruitMe.Web/package.json
@@ -36,6 +36,7 @@
         "ajv": "^6.10.2",
         "axios": "^0.19.0",
         "inversify": "^5.0.1",
+        "material-design-icons-iconfont": "^5.0.1",
         "popper.js": "^1.16.0",
         "ts-loader": "^6.2.1",
         "vue": "^2.4.2",
