--- a/src/RecruitMe.Web/package.json
+++ b/src/RecruitMe.Web/package.json
@@ -8,6 +8,7 @@
         "bootstrap": "^4.3.1",
         "copy-webpack-plugin": "^4.0.1",
         "css-loader": "^3.2.0",
+        "deepmerge": "^4.2.2",
         "eslint": "^3.19.0",
         "eslint-config-standard": "^6.2.1",
         "eslint-friendly-formatter": "^3.0.0",
@@ -16,7 +17,11 @@
         "eslint-plugin-promise": "^3.4.0",
         "eslint-plugin-standard": "^2.0.1",
         "extract-text-webpack-plugin": "^3.0.2",
+        "fibers": "^4.0.2",
         "file-loader": "^4.2.0",
+        "jquery": "3.4.1",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0",
         "style-loader": "^1.0.0",
         "typescript": "^3.6.4",
         "url-loader": "^2.2.0",
@@ -28,20 +33,19 @@
         "webpack-bundle-analyzer": "^2.2.1",
         "webpack-dev-middleware": "^3.7.2",
         "webpack-hot-middleware": "^2.25.0",
-        "webpack-merge": "^4.1.0",
-        "jquery": "3.4.1"
+        "webpack-merge": "^4.1.0"
     },
     "dependencies": {
-        "@types/node": "^12.12.8",
-        "ajv": "^6.10.2",
-        "axios": "^0.19.0",
-        "inversify": "^5.0.1",
-        "material-design-icons-iconfont": "^5.0.1",
-        "popper.js": "^1.16.0",
-        "ts-loader": "^6.2.1",
-        "vue": "^2.4.2",
-        "vue-resource": "^1.3.4",
-        "vue-router": "^3.1.3",
-        "vuetify": "^0.15.1"
+      "@types/node": "^12.12.8",
+      "ajv": "^6.10.2",
+      "axios": "^0.19.0",
+      "inversify": "^5.0.1",
+      "material-design-icons-iconfont": "^5.0.1",
+      "popper.js": "^1.16.0",
+      "ts-loader": "^6.2.1",
+      "vue": "^2.4.2",
+      "vue-resource": "^1.3.4",
+      "vue-router": "^3.1.3",
+      "vuetify": "2.1.12"
     }
 }
