--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,12 +4,13 @@ options:
   max-time: 2
 
 pipelines:
-  default:
-    - step:
-        caches:
-          - dotnetcore
-        script: 
-          - dotnet restore src/RecruitMe.Logic/RecruitMe.Logic.csproj
-          - dotnet restore src/RecruitMe.Logic.Tests/RecruitMe.Logic.Tests.csproj
-          - dotnet build src/RecruitMe.sln -c Release  
-          - dotnet test src/RecruitMe.sln -c Release
+  branches:
+    'master,dev':
+        - step:
+            caches:
+              - dotnetcore
+            script: 
+              - dotnet restore src/RecruitMe.Logic/RecruitMe.Logic.csproj
+              - dotnet restore src/RecruitMe.Logic.Tests/RecruitMe.Logic.Tests.csproj
+              - dotnet build src/RecruitMe.sln -c Release  
+              - dotnet test src/RecruitMe.sln -c Release
