--- a/src/RecruitMe.Web/package.json
+++ b/src/RecruitMe.Web/package.json
@@ -36,16 +36,17 @@
         "webpack-merge": "^4.1.0"
     },
     "dependencies": {
-      "@types/node": "^12.12.8",
-      "ajv": "^6.10.2",
-      "axios": "^0.19.0",
-      "inversify": "^5.0.1",
-      "material-design-icons-iconfont": "^5.0.1",
-      "popper.js": "^1.16.0",
-      "ts-loader": "^6.2.1",
-      "vue": "^2.4.2",
-      "vue-resource": "^1.3.4",
-      "vue-router": "^3.1.3",
-      "vuetify": "2.1.12"
+        "@types/node": "^12.12.8",
+        "ajv": "^6.10.2",
+        "axios": "^0.19.0",
+        "file-saver": "^2.0.2",
+        "inversify": "^5.0.1",
+        "material-design-icons-iconfont": "^5.0.1",
+        "popper.js": "^1.16.0",
+        "ts-loader": "^6.2.1",
+        "vue": "^2.4.2",
+        "vue-resource": "^1.3.4",
+        "vue-router": "^3.1.3",
+        "vuetify": "2.1.12"
     }
 }
