--- a/src/RecruitMe.MobileApp/package.json
+++ b/src/RecruitMe.MobileApp/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@vue/devtools": "^5.0.6",
     "axios": "^0.19.0",
+    "nativescript-background-http": "^4.2.1",
+    "nativescript-camera": "^4.5.0",
     "nativescript-feedback": "^1.3.12",
+    "nativescript-imagepicker": "^7.1.0",
     "nativescript-socketio": "^3.2.1",
     "nativescript-theme-core": "^1.0.6",
     "nativescript-toasty": "^1.3.0",
