--- a/src/RecruitMe.Web/package.json
+++ b/src/RecruitMe.Web/package.json
@@ -47,6 +47,7 @@
         "vue": "^2.4.2",
         "vue-resource": "^1.3.4",
         "vue-router": "^3.1.3",
-        "vuetify": "2.1.12"
+        "vuetify": "2.1.12",
+        "vuetify-datetime-picker": "^2.1.1"
     }
 }
