--- a/src/RecruitMe.Web/tsconfig.json
+++ b/src/RecruitMe.Web/tsconfig.json
@@ -8,7 +8,7 @@
     "sourceMap": true,
     "skipDefaultLibCheck": true,
     "strict": true,
-    "types": [ "node", "vuetify" ],
+    "types": [ "node", "vuetify", "file-saver" ],
     "lib": [ "es5", "es2015", "dom", "scripthost" ]
   },
   "exclude": [
