--- a/src/RecruitMe.Logic.Tests/RecruitMe.Logic.Tests.csproj
+++ b/src/RecruitMe.Logic.Tests/RecruitMe.Logic.Tests.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
@@ -16,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RecruitMe.Logic\RecruitMe.Logic.csproj" />
+    <ProjectReference Include="..\RecruitMe.Web\RecruitMe.Web.csproj" />
   </ItemGroup>
 
 </Project>
