Added configuration support

--- a/src/RecruitMe.Web/appsettings.json
+++ b/src/RecruitMe.Web/appsettings.json
@@ -5,5 +5,14 @@
     }
   },
   "ConnectionString": "server=127.0.0.1;database=db1;user=app1;password=test-test-test",
-
+  "BusinessConfiguration": {
+    "AdminLogin": "admin",
+    "InitialAdminPassword": "ZMIEN_TO_HASLO",
+    "InitialAdminPasswordHash": "qUCJK+8XBQX1VctuCSy/47SGSXP/cVtDzNfoLhir+wWBpPZe",
+    "Email": "RecruitMeSystem@gmail.com",
+    "EmailPassword": "Tester123!",
+    "LowestRegistrationDate": "2000-01-01",
+    "HighestRegistrationDate": "2005-01-01",
+    "BaseAddress": "http://localhost:5000"
+  }
 }
