App compiles in docker env

--- a/src/RecruitMe.Web/appsettings.json
+++ b/src/RecruitMe.Web/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Warning"
     }
   },
-  "ConnectionString": "server=127.0.0.1;database=db1;user=app1;password=test-test-test",
+  "ConnectionString": "server=localhost;database=recruitmedb;user=recruitme;password=Tester!123",
   "BusinessConfiguration": {
     "AdminLogin": "admin",
     "InitialAdminPassword": "ZMIEN_TO_HASLO",
