Api and DB are on docker

--- a/src/RecruitMe.Web/appsettings.json
+++ b/src/RecruitMe.Web/appsettings.json
@@ -4,7 +4,8 @@
       "Default": "Warning"
     }
   },
-  "ConnectionString": "server=localhost;database=recruitmedb;user=recruitme;password=Tester!123",
+  "Urls": "http://::80;http://0.0.0.0:80",
+  "ConnectionString": "server=rm-mysql;database=recruitmedb;user=recruitme;password=Tester!123",
   "BusinessConfiguration": {
     "AdminLogin": "admin",
     "InitialAdminPassword": "ZMIEN_TO_HASLO",
