--- a/src/RecruitMe.Web/appsettings.Development.json
+++ b/src/RecruitMe.Web/appsettings.Development.json
@@ -5,5 +5,7 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionString": "server=localhost;database=recruitmedb;user=recruitme;password=Tester!123",
+  "Urls": "http://::5000;http://0.0.0.0:5000"
 }
