Added HTTPS support

--- a/src/RecruitMe.Web/appsettings.Development.json
+++ b/src/RecruitMe.Web/appsettings.Development.json
@@ -6,6 +6,13 @@
       "Microsoft": "Information"
     }
   },
+  "https_port": 5001,
+  "http_port": 5000,
   "ConnectionString": "server=localhost;database=recruitmedb;user=recruitme;password=Tester!123",
-  "Urls": "http://::5000;http://0.0.0.0:5000"
+  "UseHttpsRedirection": "True",
+
+  "BusinessConfiguration": {
+    "BaseAddress": "https://localhost:5001",
+    "BaseAddressNoSsl": "http://localhost:5000"
+  }
 }
