--- a/src/RecruitMe.Web/appsettings.json
+++ b/src/RecruitMe.Web/appsettings.json
@@ -4,8 +4,15 @@
       "Default": "Warning"
     }
   },
-  "Urls": "http://::80;http://0.0.0.0:80",
+
+  "https_port": 443,
+  "http_port": 80,
+  "ShowErrorDetails": "True",
   "ConnectionString": "server=rm-mysql;database=recruitmedb;user=recruitme;password=Tester!123",
+  "UseHttpsRedirection": "False",
+  "SslCertificate": "ssl/aspnetapp.pfx",
+  "SslCertificatePassword": "password",
+
   "BusinessConfiguration": {
     "AdminLogin": "admin",
     "InitialAdminPassword": "ZMIEN_TO_HASLO",
@@ -14,6 +21,7 @@
     "EmailPassword": "Tester123!",
     "LowestRegistrationDate": "2000-01-01",
     "HighestRegistrationDate": "2005-01-01",
-    "BaseAddress": "http://localhost:5000"
+    "BaseAddress": "https://localhost",
+    "BaseAddressNoSsl": "http://localhost"
   }
 }
