--- a/src/RecruitMe.Web/RecruitMe.Web.csproj
+++ b/src/RecruitMe.Web/RecruitMe.Web.csproj
@@ -8,10 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="IdentityServer.rsa.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.5.3" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.5.3" />
@@ -27,29 +23,30 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="IdentityServer.rsa.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\RecruitMe.Logic\RecruitMe.Logic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="assets\" />
-    <Folder Include="assets\recruitment" />
-    <Folder Include="assets\recruitment\images" />
+    <Folder Include="assets\recruitment\" />
+    <Folder Include="assets\recruitment\images\" />
     <Folder Include="wwwroot\recruitment\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\components\account\emailverified\emailverified.vue.html" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ssl\aspnetapp.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
