--- a/src/RecruitMe.Logic.Tests/RecruitMe.Logic.Tests.csproj
+++ b/src/RecruitMe.Logic.Tests/RecruitMe.Logic.Tests.csproj
@@ -7,6 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
@@ -18,6 +30,12 @@
   <ItemGroup>
     <ProjectReference Include="..\RecruitMe.Logic\RecruitMe.Logic.csproj" />
     <ProjectReference Include="..\RecruitMe.Web\RecruitMe.Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="testCertificate.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
