--- a/src/RecruitMe.Web/RecruitMe.Web.csproj
+++ b/src/RecruitMe.Web/RecruitMe.Web.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.5.3" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.5.3" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.12" />
+    <PackageReference Include="Microsoft.AspNetCore.All"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
