Added python to docker

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -12,6 +12,16 @@ RUN dotnet publish -c Release -o /recruitme RecruitMe.Web
 
 FROM microsoft/dotnet:2.2-sdk AS runtime
 COPY --from=builder /recruitme .
+RUN apt-get update \
+  && apt-get install -y libsm6 libxext6 libxrender-dev libgdiplus \
+  && apt-get install -y python3-pip python3-dev \
+  && cd /usr/local/bin \
+  && ln -s /usr/bin/python3 python \
+  && pip3 install --upgrade pip \
+  && pip install imutils \
+  && pip install numpy \
+  && pip install opencv-python \
+  && pip install scipy
 EXPOSE 443
 EXPOSE 80
 ENV ASPNETCORE_ENVIRONMENT Release
