Removed BaseAddressNoSsl and Pull requeest fixes

--- a/src/RecruitMe.Web/appsettings.Development.json
+++ b/src/RecruitMe.Web/appsettings.Development.json
@@ -13,6 +13,6 @@
 
   "BusinessConfiguration": {
     "BaseAddress": "https://localhost:5001",
-    "BaseAddressNoSsl": "http://localhost:5000"
+    "IdentityServerUrl": "http://localhost:5000"
   }
 }
