--- a/src/RecruitMe.Web/appsettings.json
+++ b/src/RecruitMe.Web/appsettings.json
@@ -24,7 +24,7 @@
     "LowestRegistrationDate": "2000-01-01",
     "HighestRegistrationDate": "2005-01-01",
     "BaseAddress": "https://localhost",
-    "BaseAddressNoSsl": "http://localhost"
+    "IdentityServerUrl": "http://localhost"
   },
 
   "PaymentConfiguration": {
