--- a/src/RecruitMe.MobileApp/app/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/src/RecruitMe.MobileApp/app/App_Resources/Android/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 		android:label="@string/app_name"
 		android:theme="@style/AppTheme"
 		android:networkSecurityConfig="@xml/network_security_config_debug"
-		> <!-- delete networkSecurityConfig when using https -->
+		> <!-- when using http, please use network_security_config_debug -->
 
 		<activity
 			android:name="com.tns.NativeScriptActivity"
