--- a/src/RecruitMe.MobileApp/package.json
+++ b/src/RecruitMe.MobileApp/package.json
@@ -24,6 +24,7 @@
     "nativescript-theme-core": "^1.0.6",
     "nativescript-toasty": "^1.3.0",
     "nativescript-ui-sidedrawer": "^8.0.0",
+    "nativescript-urlhandler": "^1.3.0",
     "nativescript-vue": "^2.4.0",
     "nativescript-vue-devtools": "^1.2.0",
     "rxjs": "^6.5.3",
