--- a/src/RecruitMe.MobileApp/package.json
+++ b/src/RecruitMe.MobileApp/package.json
@@ -20,9 +20,9 @@
     "nativescript-camera": "^4.5.0",
     "nativescript-feedback": "^1.3.12",
     "nativescript-imagepicker": "^7.1.0",
+    "nativescript-local-notifications": "^4.1.4",
     "nativescript-socketio": "^3.2.1",
     "nativescript-theme-core": "^1.0.6",
-    "nativescript-toasty": "^1.3.0",
     "nativescript-ui-sidedrawer": "^8.0.0",
     "nativescript-urlhandler": "^1.3.0",
     "nativescript-vue": "^2.4.0",
