--- a/src/RecruitMe.Web/appsettings.json
+++ b/src/RecruitMe.Web/appsettings.json
@@ -20,6 +20,8 @@
     "InitialAdminPasswordHash": "qUCJK+8XBQX1VctuCSy/47SGSXP/cVtDzNfoLhir+wWBpPZe",
     "Email": "RecruitMeSystem@gmail.com",
     "EmailPassword": "Tester123!",
+    "EmailServer": "smtp.gmail.com",
+    "EmailServerPort": "587",
     "DefaultProfileImagePath": "wwwroot/defaultProfilePicture.jpg",
     "LowestRegistrationDate": "2000-01-01",
     "HighestRegistrationDate": "2005-01-01",
