--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ options:
 
 pipelines:
   branches:
-    'master,dev':
+    '{master,dev}':
         - step:
             caches:
               - dotnetcore
